[gd_scene load_steps=6 format=3 uid="uid://dpmbwn1bjvctg"]

[ext_resource type="Script" uid="uid://d33bejcnsxuco" path="res://Code/Scripts/burst_particle.gd" id="1_v2gm1"]

[sub_resource type="Curve" id="Curve_onnkc"]
_data = [Vector2(0, 0.325843), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_v2gm1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_hc60d"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_khgag"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="BurstParticle" type="Node2D"]
script = ExtResource("1_v2gm1")

[node name="Particle1" type="CPUParticles2D" parent="."]
emitting = false
amount = 22
one_shot = true
explosiveness = 0.85
direction = Vector2(0, 1)
spread = 2.9
gravity = Vector2(0, 0)
initial_velocity_min = 321.3
initial_velocity_max = 483.22
radial_accel_min = 14.35
radial_accel_max = 14.35
scale_amount_min = 10.0
scale_amount_max = 12.25
split_scale = true
scale_curve_x = SubResource("Curve_onnkc")
scale_curve_y = SubResource("Curve_v2gm1")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_hc60d")

[node name="Particle2" type="CPUParticles2D" parent="."]
position = Vector2(0, 1)
rotation = 3.14159
emitting = false
amount = 22
one_shot = true
explosiveness = 0.85
direction = Vector2(0, 1)
spread = 2.9
gravity = Vector2(0, 0)
initial_velocity_min = 321.3
initial_velocity_max = 483.22
radial_accel_min = 14.35
radial_accel_max = 14.35
scale_amount_min = 10.0
scale_amount_max = 12.25
split_scale = true
scale_curve_x = SubResource("Curve_onnkc")
scale_curve_y = SubResource("Curve_v2gm1")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_khgag")

[connection signal="finished" from="Particle1" to="." method="_on_cpu_particles_2d_finished"]
